[package]
name = "rufi_gradient"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "A simple aggregate program implementing the gradient with the RuFi framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rufi_core = "15.1.0"