[package]
name = "rufi_gradient"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "A simple aggregate program implementing the gradient with the RuFi framework"
homepage = "https://github.com/lm98/RuFi-gradient"
documentation = "https://github.com/lm98/RuFi-gradient"
repository = "https://github.com/lm98/RuFi-gradient"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rufi_core = "15.1.0"